# ai_playground

./: .gitignore  LICENSE  conanfile.py  settings.gradle.kts
.github/workflows/: pr.yml
ai_playground/: build.gradle.kts
ai_playground/src/main/cpp/: CMakeLists.txt  conanfile.txt
ai_playground/src/main/kotlin/com/aiplayground/mathlib/: NativeMath.kt
buildSrc/: build.gradle  build.gradle.kts  settings.gradle.kts
buildSrc/src/main/groovy/: ConanPlugin.groovy
buildSrc/src/main/kotlin/: ConanExtension.kt  ConanPlugin.kt
conan/profiles/: android-armv8  android-x86_64  android_common
mathlib/: build.gradle.kts
mathlib/src/androidTest/kotlin/com/aiplayground/mathlib/: NativeMathTest.kt
mathlib/src/main/cpp/: CMakeLists.txt  native_math.cpp
mathlib/src/main/kotlin/com/aiplayground/mathlib/: NativeMath.kt
